# TP_Grenard_Clement_Baptiste_Behr

./: chefbot.py  partie2.py  partie3.py  partie5.py  partie6.py  pyproject.toml  run_groupe_baptiste_clement_partie5.txt
